# my-c-study

./: .gitignore  CMakeLists.txt  main.c
c-primer-plus-study/: CMakeLists.txt
c-primer-plus-study/three-chapter/: AltNames.c  AltNames.h  Bases.c  CMakeLists.txt  CharCode.c  CharCode.h  ExecTest.c  Platinum.h  Print1.c  Print1.h  Print2.c  Print2.h  TooBig.c  TooBig.h
leetcode-study/: CMakeLists.txt  LeetCodeMain.c  two-sum-1.c
math-function/: CMakeLists.txt  mysqrt.h  sum.c  sum.h
my-test-code/: CMakeLists.txt  Pic.cpp  Server.c
